# quartz-wm

./: .gitignore  Makefile.am  README  README.md  configure.ac
lib/: .gitignore  Makefile.am  dock-support.h  libquartz-wm-ds.apsl.dylib
man/: .gitignore  Makefile.am  quartz-wm.man
src/: .gitignore  Makefile.am  dock-support-handler.m  dock-support.h  frame.h  frame.m  main.m  quartz-wm.h  utils.h  utils.m  x-input.m  x-list.c  x-list.h  x-screen.h  x-screen.m  x-selection.h  x-selection.m  x-window.h  x-window.m  x11-geometry.c  x11-geometry.h
